# helloworld

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml
.github/workflows/: ci.yml  release.yml
benches/: greet_bench.rs
docs/: api.md
examples/: basic_usage.rs  multilingual_usage.rs
src/: lib.rs  main.rs
tests/: integration_test.rs
